--- a/templates/include/common/top.html
+++ b/templates/include/common/top.html
@@ -5,13 +5,14 @@
     <span>欢迎来到91成人商城</span>
     {% if user.is_authenticated %}
         <span>{{ user.username }}</span>
-        <a href="#">退出</a>
+        <a href="{% url 'logout' %}">退出</a>
     {% else %}
-        <a href="{% url 'login.' %}">登录</a>
+        <a href="{% url 'login' %}">登录</a>
         <a href="#">注册</a>
     {% endif %}
 
         <a href="#" class="order">我的订单</a>
-        <a href="#"><span class="glyphicon glyphicon-shopping-cart" style="color: red"></span>购物车</a>
-
+        <a href="#" id="car"> <span class="glyphicon glyphicon-shopping-cart"></span>购物车
+        {% if user.is_authenticated %} <span id="car_number">0</span>件 {% endif %}
+        </a>
 </div>
