--- a/apps/detail/templates/include/shop_content.html
+++ b/apps/detail/templates/include/shop_content.html
@@ -29,10 +29,10 @@
             <p>{{ shop.original_price }}</p>
             <p>{{ shop.promote_price }}</p>
         </div>
-            <input type="number" value="1" min="1" max="{{ shop.stock }}"><span>{{ shop.stock }}</span>
+            <input id="number" type="number" value="1" min="1" max="{{ shop.stock }}"><span>{{ shop.stock }}</span>
         <div>
             <button type="button">立即购买</button>
-            <button type="button">加入购物车</button>
+            <button type="button" id="buy" shopid="{{ shop.shop_id }}">加入购物车</button>
         </div>
     </div>
 </div>
