--- a/apps/main/templates/include/cate.html
+++ b/apps/main/templates/include/cate.html
@@ -1,7 +1,7 @@
 <div class="cate">
     <ul>
         {% for cate in cate_list %}
-            <li><a href="#" style="color: white">{{ cate.name }}</a></li>
+            <li><span class="glyphicon glyphicon-link"></span><a href="#" style="color: white">{{ cate.name }}</a></li>
 
         {% endfor %}
     </ul>
