--- a/apps/search/templates/page_search.html
+++ b/apps/search/templates/page_search.html
@@ -12,9 +12,11 @@
         <ul class="clearfix">
             {% for shop in shops %}
             <li class="shop_search_img">
-                <img src="/static/img/middle/{{ shop.img.shop_img_id }}.jpg">
-                <p>{{ shop.promote_price }}</p>
-                <p>{{ shop.name }}</p>
+                <a href="{% url 'detail' %}?sid={{ shop.shop_id }}">
+                    <img src="/static/img/middle/{{ shop.img.shop_img_id }}.jpg">
+                    <p>{{ shop.promote_price }}</p>
+                    <p>{{ shop.name }}</p>
+                </a>
                 <a href="#">天猫专卖</a>
                 <p><span>月成交量:</span><span>评论:</span></p>
             </li>
