增加数据库资料

--- a/apps/cart/templates/include/page_car.html
+++ b/apps/cart/templates/include/page_car.html
@@ -63,7 +63,8 @@
                 <div class="bar-right">
                     <div class="piece">已选商品<strong class="piece_num">0</strong>件</div>
                     <div class="totalMoney">共计: <strong class="total_text">0.00</strong></div>
-                    <div class="calBtn"><input type="button" id="buy_btn" value="结算"></div>
+                    <div class="calBtn"><a id="buy_btn" href="{% url 'pay' %}">结算</a></div>
+
                 </div>
             </div>
             <section class="model_bg"></section>
